--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <li>Python</li>
       <li>Linux</li>
       <li>Wireshark</li>
-      <li>Burp Suite</li>
+      <li>Autodesk Maya</li>
       <li>Blender</li>
       <li>Git/GitHub</li>
     </ul>
