Update Linux skill to Linux administrator and fix typo

--- a/index.html
+++ b/index.html
@@ -53,11 +53,12 @@
       <li>Unity</li>
       <li>Unreal Engine</li>
       <li>Python</li>
-      <li>Linux</li>
+      <li>Linux administrator</li>
       <li>Wireshark</li>
       <li>Autodesk Maya</li>
       <li>Blender</li>
       <li>Git/GitHub</li>
+      <li>WireShark</li>
     </ul>
   </section>
 
