--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <li>Unity</li>
       <li>Unreal Engine</li>
       <li>Python</li>
-      <li>Linux administrator</li>
+      <li>Linux Administrator</li>
       <li>Wireshark</li>
       <li>Autodesk Maya</li>
       <li>Blender</li>
