Refine skills sections for cybersecurity and game design

--- a/index.html
+++ b/index.html
@@ -46,18 +46,27 @@
   </section>
 
   <section class="skills">
-    <h2>Skills & Tools</h2>
+    <h2>Skills & Tools For Cybersecurity</h2>
+    <ul>
+      <li>HTML/CSS</li>
+      <li>JavaScript</li>
+      <li>Python</li>
+      <li>Linux Administrator</li>
+      <li>Wireshark</li>
+      <li>Git/GitHub</li>
+    </ul>
+  </section>
+
+    <section class="skills">
+    <h2>Skills & Tools For Game Design</h2>
     <ul>
       <li>HTML/CSS</li>
       <li>JavaScript</li>
       <li>Unity</li>
       <li>Unreal Engine</li>
       <li>Python</li>
-      <li>Linux Administrator</li>
-      <li>Wireshark</li>
       <li>Autodesk Maya</li>
       <li>Blender</li>
-      <li>Git/GitHub</li>
     </ul>
   </section>
 
