Refactor 'About Me' paragraph for clarity

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 
   <section class="about">
     <h2>About Me</h2>
-    <p>Hi, I'm Jonathan — a college student studying game design and cybersecurity. I'm passionate about creating immersive digital experiences and building secure systems. I love working on projects that challenge my creativity and problem-solving skills.</p>
+    <p>Hi, I'm Jonathan — a college student studying game design and cybersecurity. I'm passionate about creating immersive digital experiences and building secure systems. 
+      I love working on projects that challenge my creativity and problem-solving skills.</p>
   </section>
 
   <section class="skills">
