Replace 'Login' link with 'Testing' link

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   <nav>
     <a href="index.html">Home</a>
-    <a href="login.html">Login</a>
+    <a href="Testing.html">Testing</a>
   </nav>
 
   <section class="about">
