Update navigation links in index.html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 
   <nav>
     <a href="index.html">Home</a>
-    <a href="Testing.html">Testing</a>
+    <a href="Projects.html">Projects</a>
+    <a href="Education.html">Education</a>
   </nav>
 
   <section class="about">
