--- a/Projects.html
+++ b/Projects.html
@@ -35,9 +35,10 @@
     <p>Game Design & Cybersecurity Student</p>
   </header>
 
-  <nav>
+<nav>
     <a href="index.html">Home</a>
-    <a href="Testing.html">Testing</a>
+    <a href="Projects.html">Projects</a>
+    <a href="Education.html">Education</a>
   </nav>
   
   <section class="projects">
