Update project descriptions in Projects.html

--- a/Projects.html
+++ b/Projects.html
@@ -44,16 +44,16 @@
   <section class="projects">
     <h2>My Work</h2>
     <div class="project-card">
-      <h3>Top-Down Shooter Prototype</h3>
-      <p>A Unity game demo featuring a player-controlled character in a procedurally generated dungeon. Focused on combat mechanics and pixel art design.</p>
+      <h3>Test 1</h3>
+      <p>Test</p>
     </div>
     <div class="project-card">
-      <h3>Basic Vulnerability Scanner</h3>
-      <p>Python-based CLI tool that scans local networks for open ports and common vulnerabilities, using Nmap and OS fingerprinting libraries.</p>
+      <h3>Test 2r</h3>
+      <p>Test Test</p>
     </div>
     <div class="project-card">
-      <h3>3D Modeling Project: Sci-Fi Crate</h3>
-      <p>A hard-surface model created in Blender and textured using Substance Painter. Intended for use in first-person exploration games.</p>
+      <h3>test 3</h3>
+      <p>Test Test Test</p>
     </div>
   </section>
 
