Fix typos in project titles

--- a/Projects.html
+++ b/Projects.html
@@ -48,11 +48,11 @@
       <p>Test</p>
     </div>
     <div class="project-card">
-      <h3>Test 2r</h3>
+      <h3>Test 2</h3>
       <p>Test Test</p>
     </div>
     <div class="project-card">
-      <h3>test 3</h3>
+      <h3>Test 3</h3>
       <p>Test Test Test</p>
     </div>
   </section>
