--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <a href="index.html">Home</a>
     <a href="Projects.html">Projects</a>
     <a href="Education.html">Education</a>
+    <a href="Test.html">Education Test</a>
   </nav>
 
   <section class="about">
