--- a/Test.html
+++ b/Test.html
@@ -5,48 +5,52 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Education • Jonathan Wayne Snodgrass</title>
   <style>
-    /* ===== base (mirrors the simple/dark vibe on your homepage) ===== */
-    :root { --bg:#0b0d10; --text:#e7eef6; --muted:#a9b5c4; --chip:#11161c; --chipBorder:#202b37; --accent:#8bd3ff; }
+    /* ===== minimalist dark theme to mirror your index.html look ===== */
+    :root { --bg:#0b0d10; --text:#e7eef6; --muted:#a9b5c4; --accent:#8bd3ff; --chip:#0f141a; --chipBorder:#223142; }
     * { box-sizing: border-box; }
     html, body { height: 100%; }
     body { margin: 0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif; background: var(--bg); color: var(--text); }
-    header, footer { max-width: 1100px; margin: 0 auto; padding: 24px 16px; }
-    main { max-width: 1100px; margin: 0 auto; padding: 16px; }
-    h1 { margin: 0 0 4px; font-size: clamp(24px, 4vw, 36px); }
+
+    /* header / footer consistent with home */
+    header, footer { max-width: 900px; margin: 0 auto; padding: 24px 16px; }
+    main { max-width: 900px; margin: 0 auto; padding: 16px; }
+    h1 { margin: 0 0 6px; font-size: clamp(24px, 4vw, 36px); font-weight: 700; }
     .tagline { color: var(--muted); margin: 0 0 12px; }
-    nav a { color: var(--accent); text-decoration: none; margin-right: 14px; }
-    nav a:hover { text-decoration: underline; }
-    .crumb { color: var(--muted); font-size: 14px; margin-bottom: 8px; }
-    .intro { color: var(--muted); margin: 8px 0 18px; }
 
-    /* ===== filters ===== */
+    /* nav: plain inline links like your home page */
+    nav { display: flex; gap: 12px; margin-bottom: 6px; }
+    nav a { color: var(--accent); text-decoration: none; padding: 2px 0; }
+    nav a[aria-current="page"] { text-decoration: underline; }
+
+    .crumb { color: var(--muted); font-size: 14px; margin: 10px 0 8px; }
+    h2 { margin: 6px 0 8px; font-size: 22px; }
+    .intro { color: var(--muted); margin: 6px 0 16px; }
+
+    /* filters: unobtrusive, rounded like simple chips */
     .filters { display: flex; gap: 8px; flex-wrap: wrap; margin: 12px 0 16px; }
-    .filters input, .filters select { background:#0f141a; color: var(--text); border: 1px solid #223142; border-radius: 9999px; padding: 8px 14px; outline: none; }
+    .filters input, .filters select { background: var(--chip); color: var(--text); border: 1px solid var(--chipBorder); border-radius: 9999px; padding: 8px 14px; outline: none; }
 
-    /* ===== bubble list (chips like on your home page) ===== */
-    .bubbles { display: flex; flex-wrap: wrap; gap: 12px; }
-    .bubble { position: relative; background: radial-gradient(1000px 280px at -10% -10%, rgba(139,211,255,.08), transparent 42%), var(--chip); border: 1px solid var(--chipBorder); border-radius: 9999px; padding: 10px 14px; display: inline-flex; align-items: center; gap: 10px; cursor: pointer; transition: transform .12s ease, border-color .15s ease, box-shadow .2s ease; }
-    .bubble:hover { transform: translateY(-1px); border-color: #2a3a4c; box-shadow: 0 10px 22px rgba(0,0,0,.35); }
-    .bubble .code { font-weight: 700; letter-spacing: .3px; color: #cbe9ff; }
-    .bubble .caret { width: 0; height: 0; border-left: 6px solid #8bd3ff; border-top: 6px solid transparent; border-bottom: 6px solid transparent; transition: transform .12s ease; }
-    .bubble.open .caret { transform: rotate(90deg); }
+    /* bubble chips (flat, no glow/shadow, to match your minimalist style) */
+    .list { display: grid; gap: 10px; }
+    .row { display: grid; grid-template-columns: 1fr; gap: 6px; }
+    .bubble { display: inline-flex; align-items: center; gap: 10px; border: 1px solid var(--chipBorder); background: var(--chip); color: var(--text); border-radius: 9999px; padding: 10px 14px; cursor: pointer; user-select: none; }
+    .bubble:focus-visible { outline: 2px solid var(--accent); outline-offset: 2px; }
+    .code { font-weight: 700; letter-spacing: .2px; color: #cfe6ff; }
+    .caret { width: 0; height: 0; border-left: 6px solid var(--accent); border-top: 6px solid transparent; border-bottom: 6px solid transparent; transition: transform .12s ease; }
+    .bubble[aria-expanded="true"] .caret { transform: rotate(90deg); }
 
-    /* drop panel that reveals under its bubble, matching the bubble width visually */
-    .panel { width: 100%; flex-basis: 100%; max-width: 100%; border-left: 2px dashed #2a3a4c; margin-left: 18px; padding-left: 12px; color: var(--muted); line-height: 1.55; display: none; }
-    .bubble.open + .panel { display: block; }
-
-    /* grouping rows into a neat flow */
-    .list { display: grid; grid-template-columns: repeat(1, minmax(0, 1fr)); gap: 8px 0; }
-
-    @media (min-width: 700px) {
-      .list { grid-template-columns: repeat(2, minmax(0, 1fr)); }
-      .panel { grid-column: 1 / -1; }
-    }
-    @media (min-width: 1000px) {
-      .list { grid-template-columns: repeat(3, minmax(0, 1fr)); }
-    }
+    /* description panel: simple, no box-shadows; spacing matches home */
+    .panel { display: none; padding-left: 18px; border-left: 2px dashed var(--chipBorder); color: var(--muted); line-height: 1.55; }
+    .panel.open { display: block; }
 
     .meta { color: var(--muted); font-size: 12.5px; }
+
+    @media (min-width: 760px) {
+      .list { grid-template-columns: 1fr 1fr; }
+    }
+    @media (min-width: 1040px) {
+      .list { grid-template-columns: 1fr 1fr 1fr; }
+    }
   </style>
 </head>
 <body>
@@ -63,7 +67,7 @@
   <main>
     <div class="crumb">Portfolio / Education</div>
     <h2>Completed Courses @ Fayetteville Tech</h2>
-    <p class="intro">Click a bubble to drop down the course description. If FTCC doesn’t list one, it will show <strong>N/A</strong>.</p>
+    <p class="intro">Click a bubble to reveal the course description. If FTCC doesn’t list one, you’ll see <strong>N/A</strong>.</p>
 
     <div class="filters">
       <input id="q" type="search" placeholder="Search title or code…" aria-label="Search courses" />
@@ -95,7 +99,7 @@
   </footer>
 
   <script>
-    // Completed courses. If a description is empty, UI will show "N/A" (no external links shown).
+    // Completed courses (descriptions left blank will show "N/A").
     const COURSES = [
       { code: "SEC-110", title: "Security Concepts", subject: "Cybersecurity", desc: "This course introduces the concepts and issues related to securing information systems and the development of policies to implement information security." },
       { code: "NOS-120", title: "Linux/UNIX Single User", subject: "Networking", desc: "" },
@@ -132,17 +136,32 @@
     const subject = $('#subject');
     const sort = $('#sort');
 
-    function itemTemplate(c){
-      return `
-        <div class="bubbles">
-          <div class="bubble" role="button" aria-expanded="false" tabindex="0" data-code="${c.code}">
-            <div class="caret" aria-hidden="true"></div>
-            <span class="code">${c.code}</span> ${c.title}
-          </div>
-          <div class="panel" id="panel-${c.code}">
-            ${c.desc && c.desc.trim() ? c.desc : '<em>N/A</em>'}
-          </div>
-        </div>`;
+    function bubble(c){
+      const wrapper = document.createElement('div');
+      wrapper.className = 'row';
+
+      const btn = document.createElement('button');
+      btn.type = 'button';
+      btn.className = 'bubble';
+      btn.setAttribute('aria-expanded','false');
+      btn.setAttribute('aria-controls', `panel-${c.code}`);
+      btn.innerHTML = `<span class="caret" aria-hidden="true"></span><span class="code">${c.code}</span> ${c.title}`;
+
+      const panel = document.createElement('div');
+      panel.className = 'panel';
+      panel.id = `panel-${c.code}`;
+      panel.innerHTML = c.desc && c.desc.trim() ? c.desc : '<em>N/A</em>';
+
+      const toggle = () => {
+        const next = btn.getAttribute('aria-expanded') === 'false';
+        btn.setAttribute('aria-expanded', String(next));
+        panel.classList.toggle('open', next);
+      };
+      btn.addEventListener('click', toggle);
+      btn.addEventListener('keydown', (e)=>{ if(e.key === 'Enter' || e.key === ' '){ e.preventDefault(); toggle(); }});
+
+      wrapper.append(btn, panel);
+      return wrapper;
     }
 
     function render(){
@@ -155,18 +174,8 @@
       if(sort.value === 'za'){ items.sort((a,b)=> b.title.localeCompare(a.title)); }
       if(sort.value === 'code'){ items.sort((a,b)=> a.code.localeCompare(b.code)); }
 
-      list.innerHTML = items.map(itemTemplate).join('');
-
-      list.querySelectorAll('.bubble').forEach(b => {
-        const toggle = () => {
-          const open = b.classList.toggle('open');
-          b.setAttribute('aria-expanded', open ? 'true' : 'false');
-          const panel = b.nextElementSibling;
-          if(panel){ panel.style.display = open ? 'block' : 'none'; }
-        };
-        b.addEventListener('click', toggle);
-        b.addEventListener('keydown', (e) => { if(e.key === 'Enter' || e.key === ' '){ e.preventDefault(); toggle(); }});
-      });
+      list.innerHTML = '';
+      items.forEach(c => list.appendChild(bubble(c)));
     }
 
     q.addEventListener('input', render);
